fixed bug with postitioning of canvas after adding router, had to wrap canvas in div and display flex

--- a/public/styles.css
+++ b/public/styles.css
@@ -15,13 +15,13 @@ body {
   justify-content: center;
   background-color: black;
 }
-#root {
+/* #root {
   height:100%;
   width: 700px;
   background-color:#030314;
   display: flex;
   justify-content: space-around;
-}
+} */
 
 .title {
   font-family: 'zelda';
@@ -32,16 +32,28 @@ body {
   z-index: 100;
 }
 
+.landing-page {
+  width: 700px;
+  height: 1000px;
+  display: flex;
+  justify-content: center;
+}
+
+
+.enter-button-container {
+  position: absolute;
+	bottom: 18%;
+  width: 300px;
+  height: 80px;
+}
 
 .enter-button {
   cursor: pointer;
   position: absolute;
-	bottom: 22%;
   font-size: 50px;
   font-family: 'zelda';
   width: 300px;
   height: 80px;
-  text-align: center;
   color:#9ea59d;
 	z-index: 100;
   border-radius: 35px;
